Add start script to properly set rindexer PATH

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "NFT Marketplace Indexer using Rindexer",
   "scripts": {
-    "start": "rindexer start all"
+    "start": "bash start.sh"
   },
   "engines": {
     "node": ">=18.0.0"
