--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,5 @@
 [phases.setup]
-nixPkgs = ['curl']
-
-[phases.install]
-cmds = [
-  'curl -L https://rindexer.xyz/install.sh | bash',
-  'export PATH="$HOME/.rindexer/bin:$PATH"'
-]
+nixPkgs = ['bash', 'curl']
 
 [start]
-cmd = 'export PATH="$HOME/.rindexer/bin:$PATH" && rindexer start all'
+cmd = 'bash start.sh'
