--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,11 @@
 [phases.setup]
-nixPkgs = ['bash', 'curl']
+nixPkgs = ['bash', 'curl', 'gnutar', 'gzip']
+
+[phases.build]
+cmds = [
+  'curl -L https://rindexer.xyz/install.sh | bash',
+  'cp $HOME/.rindexer/bin/rindexer /usr/local/bin/ || cp $HOME/.cargo/bin/rindexer /usr/local/bin/ || true'
+]
 
 [start]
-cmd = 'bash start.sh'
+cmd = '/usr/local/bin/rindexer start all || $HOME/.rindexer/bin/rindexer start all'
