--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -3,9 +3,10 @@ project_type: no-code
 config: {}
 timestamps: null
 networks:
-- name: anvil
-  chain_id: 31337
-  rpc: http://127.0.0.1:8545
+# Remove or comment out anvil network since it's localhost
+# - name: anvil
+#   chain_id: 31337
+#   rpc: http://127.0.0.1:8545
 - name: ethereum:sepolia
   chain_id: 11155111
   rpc: ${SEPOLIA_RPC_URL}
@@ -18,16 +19,17 @@ storage:
     host: ${DB_HOST}
     port: ${DB_PORT}
   csv:
-    enabled: true
+    enabled: false  # Change to false for production
     path: ./generated_csv
 native_transfers:
   enabled: false
 contracts:
 - name: NftMarketplace
   details:
-  - network: anvil
-    address: 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
-    start_block: '0'
+  # Remove anvil network details
+  # - network: anvil
+  #   address: 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+  #   start_block: '0'
   - network: ethereum:sepolia
     address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
     start_block: '9711451'
@@ -37,4 +39,4 @@ contracts:
   - name: ItemCanceled
   - name: ItemBought
 global:
-  health_port: 0
+  health_port: 3000  # Set a proper port
