--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -1,15 +1,12 @@
+manifest_version: 2
 name: marketplaceIndexer
-project_type: evm_indexer
-config: {}
-timestamps: null
+project_type: indexer
+
 networks:
-# Remove or comment out anvil network since it's localhost
-# - name: anvil
-#   chain_id: 31337
-#   rpc: http://127.0.0.1:8545
-- name: ethereum:sepolia
-  chain_id: 11155111
-  rpc: ${SEPOLIA_RPC_URL}
+  - name: ethereum:sepolia
+    chain_id: 11155111
+    rpc: ${SEPOLIA_RPC_URL}
+
 storage:
   postgres:
     enabled: true
@@ -18,25 +15,21 @@ storage:
     password: ${DB_PASSWORD}
     host: ${DB_HOST}
     port: ${DB_PORT}
-  csv:
-    enabled: false  # Change to false for production
-    path: ./generated_csv
+
 native_transfers:
   enabled: false
+
 contracts:
-- name: NftMarketplace
-  details:
-  # Remove anvil network details
-  # - network: anvil
-  #   address: 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
-  #   start_block: '0'
-  - network: ethereum:sepolia
-    address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
-    start_block: '9711451'
-  abi: ./abis/NftMarketplace.abi.json
-  include_events:
-  - name: ItemListed
-  - name: ItemCanceled
-  - name: ItemBought
+  - name: NftMarketplace
+    abi: ./abis/NftMarketplace.abi.json
+    details:
+      - network: ethereum:sepolia
+        address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
+        start_block: "9711451"
+    include_events:
+      - name: ItemListed
+      - name: ItemCanceled
+      - name: ItemBought
+
 global:
-  health_port: 3001  # Set a proper port
+  health_port: 3001
