--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -1,35 +1,31 @@
-manifest_version: 2
 name: marketplaceIndexer
-project_type: indexer
-
+project_type: no-code
 networks:
-  - name: ethereum:sepolia
-    chain_id: 11155111
-    rpc: ${SEPOLIA_RPC_URL}
-
+- name: anvil
+  chain_id: 31337
+  rpc: http://127.0.0.1:8545 # Can use environment variables too!
+- name: ethereum:sepolia
+  chain_id: 11155111
+  rpc: ${SEPOLIA_RPC_URL}
 storage:
   postgres:
     enabled: true
-    db_name: ${DB_NAME}
-    user: ${DB_USER}
-    password: ${DB_PASSWORD}
-    host: ${DB_HOST}
-    port: ${DB_PORT}
-
+  csv:
+    enabled: true
+    path: ./generated_csv
 native_transfers:
   enabled: false
-
 contracts:
-  - name: NftMarketplace
-    abi: ./abis/NftMarketplace.abi.json
-    details:
-      - network: ethereum:sepolia
-        address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
-        start_block: "9711451"
-    include_events:
-      - name: ItemListed
-      - name: ItemCanceled
-      - name: ItemBought
-
-global:
-  health_port: 3001
+- name: NftMarketplace
+  details:
+  - network: anvil
+    address: 0x7a2088a1bFc9d81c55368AE168C2C02570cB814F
+    start_block: '0'
+  - network: ethereum:sepolia
+    address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
+    start_block: '9711451'
+  abi: ./abis/NftMarketplace.abi.json
+  include_events:
+  - ItemListed
+  - ItemCanceled
+  - ItemBought
