--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -1,26 +1,26 @@
 name: marketplaceIndexer
 project_type: no-code
 networks:
-- name: anvil
-  chain_id: 31337
-  rpc: http://127.0.0.1:8545 # Can use environment variables too!
+# - name: anvil
+#   chain_id: 31337
+#   rpc: http://127.0.0.1:8545 # Can use environment variables too!
 - name: ethereum:sepolia
   chain_id: 11155111
   rpc: ${SEPOLIA_RPC_URL}
 storage:
   postgres:
     enabled: true
-  csv:
-    enabled: true
-    path: ./generated_csv
+  # csv:
+  #   enabled: true
+  #   path: ./generated_csv
 native_transfers:
   enabled: false
 contracts:
 - name: NftMarketplace
   details:
-  - network: anvil
-    address: 0x7a2088a1bFc9d81c55368AE168C2C02570cB814F
-    start_block: '0'
+  # - network: anvil
+  #   address: 0x7a2088a1bFc9d81c55368AE168C2C02570cB814F
+  #   start_block: '0'
   - network: ethereum:sepolia
     address: 0x79adCA9feB6bB753d7928731aba8529beCd3ED94
     start_block: '9711451'
