--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -10,6 +10,7 @@ networks:
 storage:
   postgres:
     enabled: true
+    url: ${DATABASE_URL}
   # csv:
   #   enabled: true
   #   path: ./generated_csv
