--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -11,6 +11,11 @@ storage:
   postgres:
     enabled: true
     url: ${DATABASE_URL}
+    host: ${DB_HOST}
+    port: ${DB_PORT}
+    database: ${DB_NAME}
+    user: ${DB_USER}
+    password: ${DB_PASSWORD}
   # csv:
   #   enabled: true
   #   path: ./generated_csv
